# cbandits

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  pr-checks.yml
config/: __init__.py  simulation_config.py
docs/: README.md  automated-testing.md  development.md  installation.md
examples/: README.md
examples/advanced_examples/: advanced_ucb_b1_example.py  advanced_ucb_b2_example.py  advanced_ucb_b2c_example.py  advanced_ucb_m1_example.py
examples/guides/: quick_start.md  ucb_b1_guide.md  ucb_b2_guide.md  ucb_b2c_guide.md  ucb_m1_guide.md
examples/simple_examples/: simple_ucb_b1_example.py  simple_ucb_b2_example.py  simple_ucb_b2c_example.py  simple_ucb_m1_example.py
notebooks/: analysis.ipynb  analysis_fixed.ipynb
src/: __init__.py
src/algorithms/: ucb_b1.py  ucb_b2.py  ucb_b2c.py  ucb_m1.py
src/cbandits/: __init__.py
src/cbandits/algorithms/: __init__.py  base_bandit_algorithm.py  ucb_b2c.py  ucb_m1.py
src/cbandits/environments/: general_cost_reward_env.py
src/cbandits/simulations/: __init__.py  runner.py
src/cbandits/utils/: __init__.py  estimators.py  plot_utils.py
src/environments/: __init__.py  bandit_environment.py  general_cost_reward_env.py
src/simulations/: runner.py
src/utils/: data_structures.py
tests/: __init__.py  test_algorithms.py  test_environments.py  test_estimators.py
