[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cbandits"
version = "0.1.0"
description = "Budget-Constrained Bandits with General Cost and Reward Distributions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dimas Soares Lima", email = "dimassoareslima@gmail.com"}
]
maintainers = [
    {name = "Dimas Soares Lima", email = "dimassoareslima@gmail.com"}
]
keywords = ["bandits", "multi-armed-bandits", "budget-constrained", "reinforcement-learning", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: reinforcement learning",
    "Topic :: Scientific/Engineering :: multi-armed bandits",
    "Topic :: Scientific/Engineering :: Mathematics"

]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.26.0,<2.1.0",
    "scipy>=1.13.0,<1.15.0",
    "matplotlib>=3.9.0,<3.10.0",
    "pandas>=2.2.0,<2.3.0",
    "seaborn>=0.13.0,<0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "jupyterlab>=4.2.0,<4.3.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "safety>=2.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cbandits"
Documentation = "https://cbandits.readthedocs.io/"
Repository = "https://github.com/yourusername/cbandits.git"
"Bug Tracker" = "https://github.com/yourusername/cbandits/issues"

[project.scripts]
cbandits-demo = "examples.simple_examples.simple_ucb_b1_example:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cbandits = ["*.md", "*.txt"]
docs = ["*.md"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 